# OpenScripts

./: .gitignore  README.md
ani-manga/: README.md  dex_migrate.py
ani-manga/novel/novel_organizer/: filter_list.txt
ani-manga/tachiyomi/mangadex_migrator/: dex_migrate.py
common/: Readme.md  pyproject.toml
common/io/: drive_utils.py  process_utils.py
common/openscripts/io/: drive_utils.py  file_utils.py  process_utils.py
common/openscripts/media/video/: mkv_utils.py
data/backups/: example_conf.yaml  rclone_sync.py
data/backups/rclone_sync/: DriveObject.py  example_conf.yaml  rclone_sync.py
linux/: README.md  libs.sh
linux/apps/: ffmpeg.sh  nut_client.sh  nut_server.sh  rclone_client.sh  rclone_server.sh  restic.sh
linux/support/: nginx.sh  utility.sh
media/audio/podcasts/: find_duplicates.py  retag.py
media/novel/novel_organizer/: novel_organizer.py
media/photo/edit/: lower_res.py  unexifier.py
media/photo/privacy/: .gitignore  unexifier.py  unhexifier.py
media/video/: video_audio_sub_processor.py
misc/: sort_and_rename.py
utils/: global_utils.py
utils/io/: drive_utils.py  process_utils.py
