[tool.poetry]
name = "openscripts"
version = "0.1.0"
description = ""
authors = ["Kraktun"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^5.9.5"
mutagen = "^1.46.0"
click = "^8.1.7"
emoji = "^2.8.0"
pyyaml = "^6.0.1"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
